build: support java 21 target compatibility